arreglamos tiempo de espera en detalleColeccion